--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,19 @@ services:
   web:
     image: captaction-php
     ports:
-      - "8090:8000"
+      - '8090:8000'
     volumes:
       - ./:/app
     command: php artisan serve --host=0.0.0.0
+
+  mysql:
+    image: mysql:5.7
+    ports:
+      - '3306:3306'
+    environment:
+      - MYSQL_ROOT_PASSWORD=toor
+    volumes:
+      - mysql-data:/var/lib/mysql
+
+volumes:
+  mysql-data:
